version/0.13/_sources/api/solver/_autosummary/settings/reference_temperature_1.rst.txt
:orphan:

.. _reference_temperature_1:

reference_temperature
=====================

.. autoclass:: ansys.fluent.core.solver.settings_231.reference_temperature_1.reference_temperature

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

