version/0.20/_sources/api/solver/_autosummary/settings/reference_temperature_1.rst.txt
:orphan:

.. _reference_temperature_1:

reference_temperature
=====================

.. autoclass:: ansys.fluent.core.solver.settings_241.reference_temperature_1.reference_temperature
    :show-inheritance:

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_7>`       Select method for calculating material property.

:ref:`value <value_3>`                     Specify the constant property value.

========================   ====================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`fluid_child <fluid_child>`                                        'child_object_type' of fluid.

:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

======================================================   ============================================

